tests/snapshots/snapshot_tests__array_init_depend.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_depend.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 i_next 4) i) (Read-Int-Int Array-Int-Int!val!1 i))",
    ],
}
