tests/snapshots/snapshot_tests__array_init_doubl.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_doubl.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a Z 64556) Z) 64556)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!10 Z 64556) Z) 64556)",
        "(= (Read-Int-Int (Write-Int-Int a Z 64556) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!10 Z 64556) Z) (Read-Int-Int Array-Int-Int!val!10 Z))",
    ],
}
